<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/bgprincipal"
    tools:context=".TasksActivity">

    <ImageButton
        android:id="@+id/backButtonTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/home"
        android:background="@null"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/AreaSolicitante"
        android:background="@drawable/edit_text"
        android:layout_marginTop="16dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion"
        android:background="@drawable/edit_text"
        android:layout_marginTop="16dp"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:id="@+id/contentEditText"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:text="@string/listadetareas"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:id="@+id/tareasTextView"
        />

    <ScrollView
        android:layout_marginTop="16dp"
        android:id="@+id/tereasScrooll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tareasContainer"
        android:orientation="vertical"/>

    </ScrollView>


</LinearLayout>